--- a/autoDMP.ini
+++ b/autoDMP.ini
@@ -1,6 +1,6 @@
 [Window][MainDockSpace]
 Pos=0,0
-Size=2048,1059
+Size=1920,987
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,8 +9,8 @@ Size=400,400
 Collapsed=0
 
 [Window][StatusBar]
-Pos=0,1058
-Size=2048,32
+Pos=0,986
+Size=1920,32
 Collapsed=0
 
 [Window][Raw Image Capture]
@@ -49,28 +49,28 @@ Collapsed=0
 DockId=0x0000000F,0
 
 [Window][Pump Setup]
-Pos=1463,21
-Size=585,1038
-Collapsed=0
-DockId=0x00000016,0
-
-[Window][Ctrl Setup]
-Pos=1422,21
-Size=498,532
-Collapsed=0
-DockId=0x00000003,0
-
-[Window][SysId Setup]
-Pos=975,21
-Size=346,966
+Pos=1525,21
+Size=395,966
 Collapsed=0
 DockId=0x0000000E,0
+
+[Window][Ctrl Setup]
+Pos=0,21
+Size=1920,528
+Collapsed=0
+DockId=0x0000000D,0
+
+[Window][SysId Setup]
+Pos=0,21
+Size=1244,966
+Collapsed=0
+DockId=0x0000000A,0
 
 [Window][SysID]
 Pos=989,21
 Size=411,966
 Collapsed=0
-DockId=0x0000000D,0
+DockId=0x0000000C,0
 
 [Window][Dear ImGui Demo]
 Pos=650,20
@@ -84,27 +84,27 @@ Collapsed=0
 
 [Window][Channels]
 Pos=0,21
-Size=606,1038
+Size=277,966
 Collapsed=0
 DockId=0x00000013,0
 
 [Window][Image Processing]
-Pos=608,1027
-Size=853,32
+Pos=279,955
+Size=1244,32
 Collapsed=0
 DockId=0x00000018,0
 
 [Window][Image Processing Setup]
-Pos=855,21
-Size=455,1038
+Pos=1246,21
+Size=455,966
 Collapsed=0
 DockId=0x00000015,0
 
 [Window][Proc Image]
-Pos=608,21
-Size=853,1004
+Pos=279,21
+Size=1244,932
 Collapsed=0
-DockId=0x00000017,0
+DockId=0x00000003,0
 
 [Table][0x475FE97E,2]
 Column 0  Weight=1.0000
@@ -130,13 +130,15 @@ Column 2  Weight=1.0000
 Column 3  Weight=1.0000
 
 [Docking][Data]
-DockSpace             ID=0xC3C5E3D9 Window=0xDEDC5B90 Pos=0,21 Size=2048,1038 Split=X
-  DockNode            ID=0x00000013 Parent=0xC3C5E3D9 SizeRef=606,1038 Selected=0x0992BDDB
-  DockNode            ID=0x00000014 Parent=0xC3C5E3D9 SizeRef=1440,1038 Split=X
-    DockNode          ID=0x00000011 Parent=0x00000014 SizeRef=853,1038 Split=Y Selected=0x080A23F9
-      DockNode        ID=0x00000017 Parent=0x00000011 SizeRef=853,1004 Selected=0x080A23F9
+DockSpace             ID=0xC3C5E3D9 Window=0xDEDC5B90 Pos=0,21 Size=1920,966 Split=X
+  DockNode            ID=0x00000013 Parent=0xC3C5E3D9 SizeRef=277,1038 Selected=0x0992BDDB
+  DockNode            ID=0x00000014 Parent=0xC3C5E3D9 SizeRef=1641,1038 Split=X
+    DockNode          ID=0x00000011 Parent=0x00000014 SizeRef=1244,1038 Split=Y Selected=0x080A23F9
+      DockNode        ID=0x00000017 Parent=0x00000011 SizeRef=853,932 Split=X Selected=0x080A23F9
+        DockNode      ID=0x00000003 Parent=0x00000017 SizeRef=883,932 Selected=0x080A23F9
+        DockNode      ID=0x0000000A Parent=0x00000017 SizeRef=359,932 Selected=0xC8E63945
       DockNode        ID=0x00000018 Parent=0x00000011 SizeRef=853,32 Selected=0x132954D7
-    DockNode          ID=0x00000012 Parent=0x00000014 SizeRef=585,1038 Split=X
+    DockNode          ID=0x00000012 Parent=0x00000014 SizeRef=395,1038 Split=X
       DockNode        ID=0x00000004 Parent=0x00000012 SizeRef=175,966 Split=Y Selected=0x7DA48818
         DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=957,290 Selected=0x7DA48818
         DockNode      ID=0x00000007 Parent=0x00000004 SizeRef=957,674 Split=Y Selected=0x40C4A1A8
@@ -147,12 +149,10 @@ DockSpace             ID=0xC3C5E3D9 Window=0xDEDC5B90 Pos=0,21 Size=2048,1038 Sp
           DockNode    ID=0x0000000B Parent=0x00000001 SizeRef=898,966 Split=Y Selected=0x7C819FC7
             DockNode  ID=0x0000000F Parent=0x0000000B SizeRef=431,932 Selected=0x7C819FC7
             DockNode  ID=0x00000010 Parent=0x0000000B SizeRef=431,32 Selected=0x820FDA7D
-          DockNode    ID=0x0000000C Parent=0x00000001 SizeRef=551,966 Split=X Selected=0xEEEF5479
-            DockNode  ID=0x0000000D Parent=0x0000000C SizeRef=411,966 Selected=0xEEEF5479
-            DockNode  ID=0x0000000E Parent=0x0000000C SizeRef=229,966 Selected=0xC8E63945
-        DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=597,966 Split=Y Selected=0x97A5C2A5
-          DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=290,532 Selected=0x8A802616
-          DockNode    ID=0x0000000A Parent=0x00000002 SizeRef=290,432 Split=X Selected=0x97A5C2A5
-            DockNode  ID=0x00000015 Parent=0x0000000A SizeRef=455,1038 Selected=0x83569755
-            DockNode  ID=0x00000016 Parent=0x0000000A SizeRef=297,1038 CentralNode=1 Selected=0x97A5C2A5
+          DockNode    ID=0x0000000C Parent=0x00000001 SizeRef=551,966 Selected=0xEEEF5479
+        DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=597,966 Split=X Selected=0x97A5C2A5
+          DockNode    ID=0x00000015 Parent=0x00000002 SizeRef=455,1038 Selected=0x83569755
+          DockNode    ID=0x00000016 Parent=0x00000002 SizeRef=297,1038 Split=Y Selected=0x97A5C2A5
+            DockNode  ID=0x0000000D Parent=0x00000016 SizeRef=281,528 Selected=0x8A802616
+            DockNode  ID=0x0000000E Parent=0x00000016 SizeRef=281,436 CentralNode=1 Selected=0x97A5C2A5
 
