--- a/autoDMP.ini
+++ b/autoDMP.ini
@@ -49,26 +49,26 @@ Collapsed=0
 DockId=0x0000000F,0
 
 [Window][Pump Setup]
-Pos=1525,21
-Size=395,966
+Pos=1570,21
+Size=350,966
 Collapsed=0
 DockId=0x0000000E,0
 
 [Window][Ctrl Setup]
-Pos=0,21
-Size=1920,528
+Pos=1570,21
+Size=350,528
 Collapsed=0
 DockId=0x0000000D,0
 
 [Window][SysId Setup]
-Pos=0,21
-Size=1244,966
+Pos=1253,21
+Size=315,932
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][SysID]
-Pos=989,21
-Size=411,966
+Pos=727,21
+Size=524,932
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -84,27 +84,33 @@ Collapsed=0
 
 [Window][Channels]
 Pos=0,21
-Size=277,966
+Size=268,966
 Collapsed=0
 DockId=0x00000013,0
 
 [Window][Image Processing]
-Pos=279,955
-Size=1244,32
+Pos=270,955
+Size=1298,32
 Collapsed=0
 DockId=0x00000018,0
 
 [Window][Image Processing Setup]
-Pos=1246,21
+Pos=1300,21
 Size=455,966
 Collapsed=0
 DockId=0x00000015,0
 
 [Window][Proc Image]
-Pos=279,21
-Size=1244,932
+Pos=270,21
+Size=1298,932
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x0000000B,0
+
+[Window][Ctrl Data]
+Pos=1016,21
+Size=552,932
+Collapsed=0
+DockId=0x0000001A,0
 
 [Table][0x475FE97E,2]
 Column 0  Weight=1.0000
@@ -131,25 +137,27 @@ Column 3  Weight=1.0000
 
 [Docking][Data]
 DockSpace             ID=0xC3C5E3D9 Window=0xDEDC5B90 Pos=0,21 Size=1920,966 Split=X
-  DockNode            ID=0x00000013 Parent=0xC3C5E3D9 SizeRef=277,1038 Selected=0x0992BDDB
-  DockNode            ID=0x00000014 Parent=0xC3C5E3D9 SizeRef=1641,1038 Split=X
-    DockNode          ID=0x00000011 Parent=0x00000014 SizeRef=1244,1038 Split=Y Selected=0x080A23F9
+  DockNode            ID=0x00000013 Parent=0xC3C5E3D9 SizeRef=268,1038 Selected=0x0992BDDB
+  DockNode            ID=0x00000014 Parent=0xC3C5E3D9 SizeRef=1650,1038 Split=X
+    DockNode          ID=0x00000011 Parent=0x00000014 SizeRef=1298,1038 Split=Y Selected=0x080A23F9
       DockNode        ID=0x00000017 Parent=0x00000011 SizeRef=853,932 Split=X Selected=0x080A23F9
-        DockNode      ID=0x00000003 Parent=0x00000017 SizeRef=883,932 Selected=0x080A23F9
-        DockNode      ID=0x0000000A Parent=0x00000017 SizeRef=359,932 Selected=0xC8E63945
+        DockNode      ID=0x00000003 Parent=0x00000017 SizeRef=981,932 Split=X Selected=0x080A23F9
+          DockNode    ID=0x00000019 Parent=0x00000003 SizeRef=719,932 Split=X Selected=0x080A23F9
+            DockNode  ID=0x0000000B Parent=0x00000019 SizeRef=455,932 Selected=0x080A23F9
+            DockNode  ID=0x0000000C Parent=0x00000019 SizeRef=524,932 Selected=0xEEEF5479
+          DockNode    ID=0x0000001A Parent=0x00000003 SizeRef=533,932 Selected=0xDB6ECE2B
+        DockNode      ID=0x0000000A Parent=0x00000017 SizeRef=315,932 Selected=0xC8E63945
       DockNode        ID=0x00000018 Parent=0x00000011 SizeRef=853,32 Selected=0x132954D7
-    DockNode          ID=0x00000012 Parent=0x00000014 SizeRef=395,1038 Split=X
+    DockNode          ID=0x00000012 Parent=0x00000014 SizeRef=350,1038 Split=X
       DockNode        ID=0x00000004 Parent=0x00000012 SizeRef=175,966 Split=Y Selected=0x7DA48818
         DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=957,290 Selected=0x7DA48818
         DockNode      ID=0x00000007 Parent=0x00000004 SizeRef=957,674 Split=Y Selected=0x40C4A1A8
           DockNode    ID=0x00000008 Parent=0x00000007 SizeRef=175,337 Selected=0x40C4A1A8
           DockNode    ID=0x00000009 Parent=0x00000007 SizeRef=175,335 Selected=0x0764DB78
       DockNode        ID=0x00000005 Parent=0x00000012 SizeRef=1743,966 Split=X
-        DockNode      ID=0x00000001 Parent=0x00000005 SizeRef=346,966 Split=X Selected=0x7C819FC7
-          DockNode    ID=0x0000000B Parent=0x00000001 SizeRef=898,966 Split=Y Selected=0x7C819FC7
-            DockNode  ID=0x0000000F Parent=0x0000000B SizeRef=431,932 Selected=0x7C819FC7
-            DockNode  ID=0x00000010 Parent=0x0000000B SizeRef=431,32 Selected=0x820FDA7D
-          DockNode    ID=0x0000000C Parent=0x00000001 SizeRef=551,966 Selected=0xEEEF5479
+        DockNode      ID=0x00000001 Parent=0x00000005 SizeRef=346,966 Split=Y Selected=0x7C819FC7
+          DockNode    ID=0x0000000F Parent=0x00000001 SizeRef=431,932 Selected=0x7C819FC7
+          DockNode    ID=0x00000010 Parent=0x00000001 SizeRef=431,32 Selected=0x820FDA7D
         DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=597,966 Split=X Selected=0x97A5C2A5
           DockNode    ID=0x00000015 Parent=0x00000002 SizeRef=455,1038 Selected=0x83569755
           DockNode    ID=0x00000016 Parent=0x00000002 SizeRef=297,1038 Split=Y Selected=0x97A5C2A5
