--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -17,7 +17,7 @@ FetchContent_Declare(
     GIT_REPOSITORY https://github.com/pthom/imgui_bundle.git
     GIT_PROGRESS TRUE
     # Enter the desired git tag below
-    GIT_TAG "v0.8.5"
+    GIT_TAG "main"
 )
 FetchContent_MakeAvailable(imgui_bundle)
 
