--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -1,13 +1,11 @@
 add_library(gui
   "./src/gui/gui.cpp"
   "./src/gui/windows/window.cpp"
-  # "./src/gui/windows/improc_setup_window.cpp"
   "./src/gui/windows/improc_window.cpp"
   "./src/gui/windows/pump_window.cpp"
   "./src/gui/windows/sysid_window.cpp")
   # "./src/gui/windows/ctrl_setup_window.cpp"
   # "./src/gui/windows/ctrl_window.cpp")
-# target_link_libraries(gui PRIVATE project_options project_warnings)
 
 # includes
 include(FetchContent)
@@ -28,34 +26,18 @@ target_include_directories(gui PUBLIC
   "$<BUILD_INTERFACE:${gui_INCLUDE_DIR}>"
   "$<INSTALL_INTERFACE:./${CMAKE_INSTALL_INCLUDEDIR}>")
 
-# find dependencies
-set(gui_DEPENDENCIES_CONFIGURED
-    # OpenGL
-    GLEW
-    # glfw3
-    CACHE STRING "")
-foreach (dep ${gui_DEPENDENCIES_CONFIGURED})
-  find_package(${dep} REQUIRED)
-  if (DEFINED ${dep}_INCLUDE_DIRS)
-    target_include_directories(gui PUBLIC ${${dep}_INCLUDE_DIRS})
-  endif ()
-endforeach ()
-
 # link dependencies
-target_link_system_libraries(gui PRIVATE
+target_link_libraries(gui PRIVATE
   util
   ctrl
   improc
   imcap
   cam
   pump
-  # ${OPENGL_opengl_LIBRARY}
-  GLEW::GLEW
-  # glfw
   imgui_bundle
 )
 
 # tests
-if(FEATURE_TESTS)
+if(BUILD_TESTS)
   add_subdirectory("./test")
 endif()
