--- a/autoDMP.ini
+++ b/autoDMP.ini
@@ -1,6 +1,6 @@
 [Window][MainDockSpace]
 Pos=0,0
-Size=2048,1088
+Size=1920,1016
 Collapsed=0
 
 [Window][Debug##Default]
@@ -49,26 +49,26 @@ Collapsed=0
 DockId=0x0000000F,0
 
 [Window][Pump Setup]
-Pos=1597,21
-Size=323,995
+Pos=1419,551
+Size=501,465
 Collapsed=0
 DockId=0x0000000E,0
 
 [Window][Ctrl Setup]
-Pos=1597,21
-Size=323,528
+Pos=1419,21
+Size=501,528
 Collapsed=0
 DockId=0x0000000D,0
 
 [Window][SysId Setup]
-Pos=1273,21
-Size=322,961
+Pos=1329,21
+Size=305,995
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][SysID]
-Pos=735,21
-Size=536,961
+Pos=761,21
+Size=566,995
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -89,26 +89,26 @@ Collapsed=0
 DockId=0x00000013,0
 
 [Window][Image Processing]
-Pos=0,21
-Size=1327,1067
+Pos=268,546
+Size=1149,470
 Collapsed=0
 DockId=0x00000018,0
 
 [Window][Image Processing Setup]
-Pos=1329,21
-Size=136,1067
+Pos=1368,21
+Size=309,995
 Collapsed=0
 DockId=0x00000015,0
 
 [Window][Proc Image]
 Pos=268,21
-Size=1327,961
+Size=1149,523
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x00000017,0
 
 [Window][Ctrl Data]
-Pos=1054,21
-Size=580,932
+Pos=929,21
+Size=488,995
 Collapsed=0
 DockId=0x0000001A,0
 
@@ -136,19 +136,19 @@ Column 2  Weight=1.0000
 Column 3  Weight=1.0000
 
 [Docking][Data]
-DockSpace             ID=0xC3C5E3D9 Window=0xDEDC5B90 Pos=0,21 Size=2048,1067 Split=X
+DockSpace             ID=0xC3C5E3D9 Window=0xDEDC5B90 Pos=0,21 Size=1920,995 Split=X
   DockNode            ID=0x00000013 Parent=0xC3C5E3D9 SizeRef=266,1038 Selected=0x0992BDDB
   DockNode            ID=0x00000014 Parent=0xC3C5E3D9 SizeRef=1652,1038 Split=X
-    DockNode          ID=0x00000011 Parent=0x00000014 SizeRef=1327,1038 Split=Y Selected=0x080A23F9
-      DockNode        ID=0x00000017 Parent=0x00000011 SizeRef=853,961 Split=X Selected=0x080A23F9
-        DockNode      ID=0x00000003 Parent=0x00000017 SizeRef=981,932 Split=X Selected=0x080A23F9
-          DockNode    ID=0x00000019 Parent=0x00000003 SizeRef=719,932 Split=X Selected=0x080A23F9
-            DockNode  ID=0x0000000B Parent=0x00000019 SizeRef=455,932 Selected=0x080A23F9
-            DockNode  ID=0x0000000C Parent=0x00000019 SizeRef=524,932 Selected=0xEEEF5479
-          DockNode    ID=0x0000001A Parent=0x00000003 SizeRef=533,932 Selected=0xDB6ECE2B
-        DockNode      ID=0x0000000A Parent=0x00000017 SizeRef=315,932 Selected=0xC8E63945
-      DockNode        ID=0x00000018 Parent=0x00000011 SizeRef=853,32 Selected=0x132954D7
-    DockNode          ID=0x00000012 Parent=0x00000014 SizeRef=323,1038 Split=X
+    DockNode          ID=0x00000011 Parent=0x00000014 SizeRef=1149,1038 Split=X Selected=0x080A23F9
+      DockNode        ID=0x00000003 Parent=0x00000011 SizeRef=1059,932 Split=X Selected=0x080A23F9
+        DockNode      ID=0x00000019 Parent=0x00000003 SizeRef=719,932 Split=X Selected=0x080A23F9
+          DockNode    ID=0x0000000B Parent=0x00000019 SizeRef=455,932 Split=Y Selected=0x080A23F9
+            DockNode  ID=0x00000017 Parent=0x0000000B SizeRef=853,523 Selected=0x080A23F9
+            DockNode  ID=0x00000018 Parent=0x0000000B SizeRef=853,470 Selected=0x132954D7
+          DockNode    ID=0x0000000C Parent=0x00000019 SizeRef=524,932 Selected=0xEEEF5479
+        DockNode      ID=0x0000001A Parent=0x00000003 SizeRef=533,932 Selected=0xDB6ECE2B
+      DockNode        ID=0x0000000A Parent=0x00000011 SizeRef=305,932 Selected=0xC8E63945
+    DockNode          ID=0x00000012 Parent=0x00000014 SizeRef=501,1038 Split=X
       DockNode        ID=0x00000004 Parent=0x00000012 SizeRef=175,966 Split=Y Selected=0x7DA48818
         DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=957,290 Selected=0x7DA48818
         DockNode      ID=0x00000007 Parent=0x00000004 SizeRef=957,674 Split=Y Selected=0x40C4A1A8
@@ -159,8 +159,8 @@ DockSpace             ID=0xC3C5E3D9 Window=0xDEDC5B90 Pos=0,21 Size=2048,1067 Sp
           DockNode    ID=0x0000000F Parent=0x00000001 SizeRef=431,932 Selected=0x7C819FC7
           DockNode    ID=0x00000010 Parent=0x00000001 SizeRef=431,32 Selected=0x820FDA7D
         DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=597,966 Split=X Selected=0x97A5C2A5
-          DockNode    ID=0x00000015 Parent=0x00000002 SizeRef=136,1038 Selected=0x83569755
-          DockNode    ID=0x00000016 Parent=0x00000002 SizeRef=32,1038 Split=Y Selected=0x97A5C2A5
+          DockNode    ID=0x00000015 Parent=0x00000002 SizeRef=309,1038 Selected=0x83569755
+          DockNode    ID=0x00000016 Parent=0x00000002 SizeRef=416,1038 Split=Y Selected=0x97A5C2A5
             DockNode  ID=0x0000000D Parent=0x00000016 SizeRef=281,528 Selected=0x8A802616
             DockNode  ID=0x0000000E Parent=0x00000016 SizeRef=281,436 CentralNode=1 Selected=0x97A5C2A5
 
