codegen mpc testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,4 +27,4 @@ add_subdirectory(./improc)
 add_subdirectory(./ctrl)
 add_subdirectory(./gui)
 add_subdirectory(./pump)
-add_subdirectory(./external/mpcmoveCodeGeneration)
+add_subdirectory(./external)
