--- a/external/mpcmoveCodeGeneration/CMakeLists.txt
+++ b/external/mpcmoveCodeGeneration/CMakeLists.txt
@@ -2,6 +2,8 @@ file(GLOB_RECURSE SOURCES "*.c" "*.h")
 
 add_library(mpcmove ${SOURCES})
 
+target_include_directories(mpcmove PUBLIC /autoDMP/external/MATLAB/extern/include)
+
 set(mpcmove_INCLUDE_DIR
   "${CMAKE_CURRENT_SOURCE_DIR}"
   CACHE STRING "")
