WIP supervisory controller window

--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -3,9 +3,8 @@ add_library(gui
   "./src/gui/windows/window.cpp"
   "./src/gui/windows/improc_window.cpp"
   "./src/gui/windows/pump_window.cpp"
-  "./src/gui/windows/sysid_window.cpp")
-  # "./src/gui/windows/ctrl_setup_window.cpp"
-  # "./src/gui/windows/ctrl_window.cpp")
+  "./src/gui/windows/sysid_window.cpp"
+  "./src/gui/windows/ctrl_window.cpp")
 
 # includes
 include(FetchContent)
