--- a/autoDMP.ini
+++ b/autoDMP.ini
@@ -8,159 +8,6 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][StatusBar]
-Pos=0,986
-Size=960,32
-Collapsed=0
-
-[Window][Raw Image Capture]
-Pos=0,21
-Size=1451,1038
-Collapsed=0
-DockId=0x00000010,0
-
-[Window][ImProc Setup]
-Pos=60,60
-Size=139,646
-Collapsed=0
-
-[Window][Processed Frame 0]
-Pos=0,21
-Size=175,290
-Collapsed=0
-DockId=0x00000006,0
-
-[Window][Processed Frame 1]
-Pos=0,313
-Size=175,337
-Collapsed=0
-DockId=0x00000008,0
-
-[Window][Processed Frame 2]
-Pos=0,652
-Size=175,335
-Collapsed=0
-DockId=0x00000009,0
-
-[Window][Proc Image Capture]
-Pos=177,21
-Size=898,932
-Collapsed=0
-DockId=0x0000000F,0
-
-[Window][Pump Setup]
-Pos=0,21
-Size=2048,1067
-Collapsed=0
-DockId=0x0000000E,0
-
-[Window][Ctrl Setup]
-Pos=1419,21
-Size=501,528
-Collapsed=0
-DockId=0x0000000D,0
-
-[Window][SysId Setup]
-Pos=1329,21
-Size=305,995
-Collapsed=0
-DockId=0x0000000A,0
-
-[Window][SysID]
-Pos=761,21
-Size=566,995
-Collapsed=0
-DockId=0x0000000C,0
-
-[Window][Dear ImGui Demo]
-Pos=650,20
-Size=550,680
-Collapsed=0
-
-[Window][ImPlot Demo]
-Pos=50,50
-Size=600,750
-Collapsed=0
-
-[Window][Channels]
-Pos=0,21
-Size=266,1067
-Collapsed=0
-DockId=0x00000013,0
-
-[Window][Image Processing]
-Pos=268,1056
-Size=1149,32
-Collapsed=0
-DockId=0x00000018,0
-
-[Window][Image Processing Setup]
-Pos=1419,21
-Size=309,1067
-Collapsed=0
-DockId=0x00000015,0
-
-[Window][Proc Image]
-Pos=268,21
-Size=1149,1033
-Collapsed=0
-DockId=0x00000017,0
-
-[Window][Ctrl Data]
-Pos=929,21
-Size=488,995
-Collapsed=0
-DockId=0x0000001A,0
-
-[Table][0x475FE97E,2]
-Column 0  Weight=1.0000
-Column 1  Weight=1.0000
-
-[Table][0xC51D6398,5]
-Column 0  Weight=1.0000
-Column 1  Weight=1.0000
-Column 2  Weight=1.0000
-Column 3  Weight=1.0000
-Column 4  Weight=1.0000
-
-[Table][0x2279FEB5,4]
-Column 0  Weight=1.0000
-Column 1  Weight=1.0000
-Column 2  Weight=1.0000
-Column 3  Weight=1.0000
-
-[Table][0xA9513BD8,4]
-Column 0  Weight=1.0000
-Column 1  Weight=1.0000
-Column 2  Weight=1.0000
-Column 3  Weight=1.0000
-
 [Docking][Data]
-DockSpace             ID=0xC3C5E3D9 Window=0xDEDC5B90 Pos=0,21 Size=2048,1067 Split=X
-  DockNode            ID=0x00000013 Parent=0xC3C5E3D9 SizeRef=266,1038 Selected=0x0992BDDB
-  DockNode            ID=0x00000014 Parent=0xC3C5E3D9 SizeRef=1652,1038 Split=X
-    DockNode          ID=0x00000011 Parent=0x00000014 SizeRef=1149,1038 Split=X Selected=0x080A23F9
-      DockNode        ID=0x00000003 Parent=0x00000011 SizeRef=1059,932 Split=X Selected=0x080A23F9
-        DockNode      ID=0x00000019 Parent=0x00000003 SizeRef=719,932 Split=X Selected=0x080A23F9
-          DockNode    ID=0x0000000B Parent=0x00000019 SizeRef=455,932 Split=Y Selected=0x080A23F9
-            DockNode  ID=0x00000017 Parent=0x0000000B SizeRef=853,1033 Selected=0x080A23F9
-            DockNode  ID=0x00000018 Parent=0x0000000B SizeRef=853,32 Selected=0x132954D7
-          DockNode    ID=0x0000000C Parent=0x00000019 SizeRef=524,932 Selected=0xEEEF5479
-        DockNode      ID=0x0000001A Parent=0x00000003 SizeRef=533,932 Selected=0xDB6ECE2B
-      DockNode        ID=0x0000000A Parent=0x00000011 SizeRef=305,932 Selected=0xC8E63945
-    DockNode          ID=0x00000012 Parent=0x00000014 SizeRef=501,1038 Split=X
-      DockNode        ID=0x00000004 Parent=0x00000012 SizeRef=175,966 Split=Y Selected=0x7DA48818
-        DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=957,290 Selected=0x7DA48818
-        DockNode      ID=0x00000007 Parent=0x00000004 SizeRef=957,674 Split=Y Selected=0x40C4A1A8
-          DockNode    ID=0x00000008 Parent=0x00000007 SizeRef=175,337 Selected=0x40C4A1A8
-          DockNode    ID=0x00000009 Parent=0x00000007 SizeRef=175,335 Selected=0x0764DB78
-      DockNode        ID=0x00000005 Parent=0x00000012 SizeRef=1743,966 Split=X
-        DockNode      ID=0x00000001 Parent=0x00000005 SizeRef=346,966 Split=Y Selected=0x7C819FC7
-          DockNode    ID=0x0000000F Parent=0x00000001 SizeRef=431,932 Selected=0x7C819FC7
-          DockNode    ID=0x00000010 Parent=0x00000001 SizeRef=431,32 Selected=0x820FDA7D
-        DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=597,966 Split=X Selected=0x97A5C2A5
-          DockNode    ID=0x00000015 Parent=0x00000002 SizeRef=309,1038 Selected=0x83569755
-          DockNode    ID=0x00000016 Parent=0x00000002 SizeRef=416,1038 Split=Y Selected=0x97A5C2A5
-            DockNode  ID=0x0000000D Parent=0x00000016 SizeRef=281,528 Selected=0x8A802616
-            DockNode  ID=0x0000000E Parent=0x00000016 SizeRef=281,436 CentralNode=1 Selected=0x97A5C2A5
+DockSpace ID=0xC3C5E3D9 Window=0xDEDC5B90 Pos=0,21 Size=2048,1067 CentralNode=1
 
