--- a/autoDMP.ini
+++ b/autoDMP.ini
@@ -3,11 +3,94 @@ Pos=0,0
 Size=2048,1088
 Collapsed=0
 
+[Window][Ctrl Setup]
+Pos=1624,21
+Size=424,530
+Collapsed=0
+DockId=0x00000001,0
+
 [Window][Debug##Default]
 Pos=60,60
 Size=400,400
 Collapsed=0
 
+[Window][Pump Setup]
+Pos=1624,553
+Size=424,535
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][Image Processing]
+Pos=250,1056
+Size=556,32
+Collapsed=0
+DockId=0x00000008,0
+
+[Window][Image Processing Setup]
+Pos=686,21
+Size=317,1067
+Collapsed=0
+DockId=0x00000005,0
+
+[Window][Proc Image]
+Pos=250,21
+Size=556,1033
+Collapsed=0
+DockId=0x00000007,0
+
+[Window][Channels]
+Pos=0,21
+Size=248,1067
+Collapsed=0
+DockId=0x00000009,0
+
+[Window][SysId Setup]
+Pos=808,21
+Size=814,1067
+Collapsed=0
+DockId=0x0000000B,0
+
+[Table][0x475FE97E,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xC51D6398,8]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+Column 5  Weight=1.0000
+Column 6  Weight=1.0000
+Column 7  Weight=1.0000
+
+[Table][0x2279FEB5,7]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+Column 5  Weight=1.0000
+Column 6  Weight=1.0000
+
+[Table][0xA9513BD8,4]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+Column 3  Weight=1.0000
+
 [Docking][Data]
-DockSpace ID=0xC3C5E3D9 Window=0xDEDC5B90 Pos=0,21 Size=2048,1067 CentralNode=1
+DockSpace         ID=0xC3C5E3D9 Window=0xDEDC5B90 Pos=0,21 Size=2048,1067 Split=X
+  DockNode        ID=0x00000003 Parent=0xC3C5E3D9 SizeRef=806,1067 Split=X Selected=0x132954D7
+    DockNode      ID=0x00000009 Parent=0x00000003 SizeRef=248,728 Selected=0x0992BDDB
+    DockNode      ID=0x0000000A Parent=0x00000003 SizeRef=556,728 Split=Y Selected=0x080A23F9
+      DockNode    ID=0x00000007 Parent=0x0000000A SizeRef=1110,1033 Selected=0x080A23F9
+      DockNode    ID=0x00000008 Parent=0x0000000A SizeRef=1110,32 Selected=0x132954D7
+  DockNode        ID=0x00000004 Parent=0xC3C5E3D9 SizeRef=1240,1067 Split=X
+    DockNode      ID=0x00000005 Parent=0x00000004 SizeRef=317,1067 Selected=0x83569755
+    DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=1043,1067 Split=X
+      DockNode    ID=0x0000000B Parent=0x00000006 SizeRef=814,1067 CentralNode=1 Selected=0xC8E63945
+      DockNode    ID=0x0000000C Parent=0x00000006 SizeRef=424,1067 Split=Y Selected=0x97A5C2A5
+        DockNode  ID=0x00000001 Parent=0x0000000C SizeRef=207,530 Selected=0x8A802616
+        DockNode  ID=0x00000002 Parent=0x0000000C SizeRef=207,535 Selected=0x97A5C2A5
 
