--- a/autoDMP.ini
+++ b/autoDMP.ini
@@ -1,11 +1,11 @@
 [Window][MainDockSpace]
 Pos=0,0
-Size=1920,1016
+Size=1920,1043
 Collapsed=0
 
 [Window][Ctrl Setup]
-Pos=1481,21
-Size=567,642
+Pos=1353,21
+Size=567,599
 Collapsed=0
 DockId=0x00000001,0
 
@@ -15,14 +15,14 @@ Size=400,400
 Collapsed=0
 
 [Window][Pump Setup]
-Pos=1353,21
-Size=567,995
+Pos=1353,622
+Size=567,394
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Image Processing]
-Pos=207,984
-Size=800,32
+Pos=0,21
+Size=835,1022
 Collapsed=0
 DockId=0x00000008,0
 
@@ -57,10 +57,25 @@ Collapsed=0
 DockId=0x0000000E,0
 
 [Window][Ctrl Data]
-Pos=586,21
-Size=893,1067
+Pos=0,21
+Size=1351,995
 Collapsed=0
 DockId=0x0000000B,0
+
+[Window][ImPlot Demo]
+Pos=1104,689
+Size=600,750
+Collapsed=0
+
+[Window][Dear ImGui Demo]
+Pos=1121,162
+Size=550,680
+Collapsed=0
+
+[Window][Dear ImGui Metrics/Debugger]
+Pos=998,326
+Size=293,360
+Collapsed=0
 
 [Table][0x475FE97E,2]
 Column 0  Weight=1.0000
@@ -92,15 +107,15 @@ Column 2  Weight=1.0000
 Column 3  Weight=1.0000
 
 [Docking][Data]
-DockSpace         ID=0xC3C5E3D9 Window=0xDEDC5B90 Pos=0,21 Size=1920,995 Split=X
-  DockNode        ID=0x00000003 Parent=0xC3C5E3D9 SizeRef=1007,1067 Split=X Selected=0x132954D7
+DockSpace         ID=0xC3C5E3D9 Window=0xDEDC5B90 Pos=0,21 Size=1920,1022 Split=X
+  DockNode        ID=0x00000003 Parent=0xC3C5E3D9 SizeRef=835,1067 Split=X Selected=0x132954D7
     DockNode      ID=0x00000009 Parent=0x00000003 SizeRef=205,728 Selected=0x0992BDDB
     DockNode      ID=0x0000000A Parent=0x00000003 SizeRef=800,728 Split=Y Selected=0x080A23F9
       DockNode    ID=0x00000007 Parent=0x0000000A SizeRef=1110,961 Split=X Selected=0x080A23F9
         DockNode  ID=0x0000000D Parent=0x00000007 SizeRef=445,1033 Selected=0x080A23F9
         DockNode  ID=0x0000000E Parent=0x00000007 SizeRef=571,1033 Selected=0xEEEF5479
       DockNode    ID=0x00000008 Parent=0x0000000A SizeRef=1110,32 Selected=0x132954D7
-  DockNode        ID=0x00000004 Parent=0xC3C5E3D9 SizeRef=911,1067 Split=X
+  DockNode        ID=0x00000004 Parent=0xC3C5E3D9 SizeRef=1083,1067 Split=X
     DockNode      ID=0x00000005 Parent=0x00000004 SizeRef=448,1067 Selected=0x83569755
     DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=461,1067 Split=X
       DockNode    ID=0x0000000B Parent=0x00000006 SizeRef=893,1067 CentralNode=1 Selected=0xDB6ECE2B
