WIP improc refactoring

--- a/autoDMP.ini
+++ b/autoDMP.ini
@@ -1,6 +1,6 @@
 [Window][MainDockSpace]
 Pos=0,0
-Size=1920,1043
+Size=1920,1016
 Collapsed=0
 
 [Window][Ctrl Setup]
@@ -22,7 +22,7 @@ DockId=0x00000002,0
 
 [Window][Image Processing]
 Pos=0,21
-Size=835,1022
+Size=835,995
 Collapsed=0
 DockId=0x00000008,0
 
@@ -33,14 +33,14 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Proc Image]
-Pos=207,21
-Size=800,961
+Pos=1313,21
+Size=533,995
 Collapsed=0
 DockId=0x0000000D,0
 
 [Window][Channels]
-Pos=0,21
-Size=205,995
+Pos=1011,21
+Size=300,995
 Collapsed=0
 DockId=0x00000009,0
 
@@ -77,6 +77,12 @@ Pos=998,326
 Size=293,360
 Collapsed=0
 
+[Window][Raw Image Capture]
+Pos=0,21
+Size=1009,995
+Collapsed=0
+DockId=0x0000000F,0
+
 [Table][0x475FE97E,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
@@ -107,19 +113,21 @@ Column 2  Weight=1.0000
 Column 3  Weight=1.0000
 
 [Docking][Data]
-DockSpace         ID=0xC3C5E3D9 Window=0xDEDC5B90 Pos=0,21 Size=1920,1022 Split=X
-  DockNode        ID=0x00000003 Parent=0xC3C5E3D9 SizeRef=835,1067 Split=X Selected=0x132954D7
-    DockNode      ID=0x00000009 Parent=0x00000003 SizeRef=205,728 Selected=0x0992BDDB
-    DockNode      ID=0x0000000A Parent=0x00000003 SizeRef=800,728 Split=Y Selected=0x080A23F9
-      DockNode    ID=0x00000007 Parent=0x0000000A SizeRef=1110,961 Split=X Selected=0x080A23F9
-        DockNode  ID=0x0000000D Parent=0x00000007 SizeRef=445,1033 Selected=0x080A23F9
-        DockNode  ID=0x0000000E Parent=0x00000007 SizeRef=571,1033 Selected=0xEEEF5479
-      DockNode    ID=0x00000008 Parent=0x0000000A SizeRef=1110,32 Selected=0x132954D7
-  DockNode        ID=0x00000004 Parent=0xC3C5E3D9 SizeRef=1083,1067 Split=X
-    DockNode      ID=0x00000005 Parent=0x00000004 SizeRef=448,1067 Selected=0x83569755
-    DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=461,1067 Split=X
-      DockNode    ID=0x0000000B Parent=0x00000006 SizeRef=893,1067 CentralNode=1 Selected=0xDB6ECE2B
-      DockNode    ID=0x0000000C Parent=0x00000006 SizeRef=567,1067 Split=Y Selected=0x97A5C2A5
-        DockNode  ID=0x00000001 Parent=0x0000000C SizeRef=207,642 Selected=0x8A802616
-        DockNode  ID=0x00000002 Parent=0x0000000C SizeRef=207,423 Selected=0x97A5C2A5
+DockSpace           ID=0xC3C5E3D9 Window=0xDEDC5B90 Pos=0,21 Size=1920,995 Split=X
+  DockNode          ID=0x0000000F Parent=0xC3C5E3D9 SizeRef=1009,995 Selected=0x820FDA7D
+  DockNode          ID=0x00000010 Parent=0xC3C5E3D9 SizeRef=909,995 Split=X
+    DockNode        ID=0x00000003 Parent=0x00000010 SizeRef=835,1067 Split=X Selected=0x132954D7
+      DockNode      ID=0x00000009 Parent=0x00000003 SizeRef=300,728 Selected=0x0992BDDB
+      DockNode      ID=0x0000000A Parent=0x00000003 SizeRef=533,728 Split=Y Selected=0x080A23F9
+        DockNode    ID=0x00000007 Parent=0x0000000A SizeRef=1110,961 Split=X Selected=0x080A23F9
+          DockNode  ID=0x0000000D Parent=0x00000007 SizeRef=445,1033 Selected=0x080A23F9
+          DockNode  ID=0x0000000E Parent=0x00000007 SizeRef=571,1033 Selected=0xEEEF5479
+        DockNode    ID=0x00000008 Parent=0x0000000A SizeRef=1110,32 Selected=0x132954D7
+    DockNode        ID=0x00000004 Parent=0x00000010 SizeRef=1083,1067 Split=X
+      DockNode      ID=0x00000005 Parent=0x00000004 SizeRef=448,1067 Selected=0x83569755
+      DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=461,1067 Split=X
+        DockNode    ID=0x0000000B Parent=0x00000006 SizeRef=893,1067 CentralNode=1 Selected=0xDB6ECE2B
+        DockNode    ID=0x0000000C Parent=0x00000006 SizeRef=567,1067 Split=Y Selected=0x97A5C2A5
+          DockNode  ID=0x00000001 Parent=0x0000000C SizeRef=207,642 Selected=0x8A802616
+          DockNode  ID=0x00000002 Parent=0x0000000C SizeRef=207,423 Selected=0x97A5C2A5
 
