--- a/config/setup.toml
+++ b/config/setup.toml
@@ -14,7 +14,7 @@ showDebug = false
 
 [cam]
 # select camera source [string: "Webcam"/"USBcam"/"File"/"Andor"]
-source      = "Webcam"
+source      = "Andor"
 # if source = "File", the selected video file is used [string]
 file        = ""
 
@@ -32,7 +32,7 @@ MetadataEnable              = 0
 MetadataTimestamp           = 0
 MetadataFrameinfo           = 0
 [andor.float]
-ExposureTime                = 0.0001     # seconds
+ExposureTime                = 0.0005     # seconds
 FrameRate                   = 40.0      # Hz
 ReadoutTime                 = 0.0
 RowReadTime                 = 0.0
@@ -54,8 +54,8 @@ BitDepth                    = "16 Bit"
 AOIBinning                  = "2x2"             # binning, intensity vs resolution
 [andor.int]
 # AOIHBin                     = 2                 # horizontal binning
-AOIWidth                    = 888 # 1776/2      # units in superpixels (540 superpixels * 2 pixels/superpixel)
-# AOIWidth                    = 1776              # 1776 for PDMS T-junction
+# AOIWidth                    = 888 # 1776/2      # units in superpixels (540 superpixels * 2 pixels/superpixel)
+AOIWidth                    = 1776              # 1776 for PDMS T-junction
 AOILeft                     = 1                 # units in sensor pixels
 # AOIVBin                     = 2                 # vertical binning
 AOIHeight                   = 1760              # units in superpixels
@@ -83,7 +83,7 @@ type      = "FLUIGENT"
 confPath    = "/autoDMP/config/ctrl/"
 dataPath    = "/autoDMP/data/ctrl/"
 # perform all steps but don't send control signal to pump [bool]
-simMode         = true
+simMode         = false
 
 [postproc]
 # path for improc data
