add +/- buttons to pump control

--- a/autoDMP.ini
+++ b/autoDMP.ini
@@ -15,8 +15,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Pump Setup]
-Pos=1553,622
-Size=367,394
+Pos=1553,21
+Size=367,995
 Collapsed=0
 DockId=0x00000002,0
 
@@ -40,13 +40,13 @@ DockId=0x0000000D,0
 
 [Window][Channels]
 Pos=926,21
-Size=252,995
+Size=234,995
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][SysId Setup]
-Pos=1151,21
-Size=471,1067
+Pos=1162,21
+Size=389,995
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -116,17 +116,17 @@ Column 3  Weight=1.0000
 DockSpace           ID=0xC3C5E3D9 Window=0xDEDC5B90 Pos=0,21 Size=1920,995 Split=X
   DockNode          ID=0x0000000F Parent=0xC3C5E3D9 SizeRef=924,995 Selected=0x820FDA7D
   DockNode          ID=0x00000010 Parent=0xC3C5E3D9 SizeRef=994,995 Split=X
-    DockNode        ID=0x00000003 Parent=0x00000010 SizeRef=252,1067 Split=X Selected=0x132954D7
+    DockNode        ID=0x00000003 Parent=0x00000010 SizeRef=234,1067 Split=X Selected=0x132954D7
       DockNode      ID=0x00000009 Parent=0x00000003 SizeRef=262,728 Selected=0x0992BDDB
       DockNode      ID=0x0000000A Parent=0x00000003 SizeRef=191,728 Split=Y Selected=0x080A23F9
         DockNode    ID=0x00000007 Parent=0x0000000A SizeRef=1110,961 Split=X Selected=0x080A23F9
           DockNode  ID=0x0000000D Parent=0x00000007 SizeRef=445,1033 Selected=0x080A23F9
           DockNode  ID=0x0000000E Parent=0x00000007 SizeRef=571,1033 Selected=0xEEEF5479
         DockNode    ID=0x00000008 Parent=0x0000000A SizeRef=1110,32 Selected=0x132954D7
-    DockNode        ID=0x00000004 Parent=0x00000010 SizeRef=740,1067 Split=X
+    DockNode        ID=0x00000004 Parent=0x00000010 SizeRef=1684,1067 Split=X
       DockNode      ID=0x00000005 Parent=0x00000004 SizeRef=448,1067 Selected=0x83569755
       DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=461,1067 Split=X
-        DockNode    ID=0x0000000B Parent=0x00000006 SizeRef=371,1067 CentralNode=1 Selected=0xDB6ECE2B
+        DockNode    ID=0x0000000B Parent=0x00000006 SizeRef=1315,1067 CentralNode=1 Selected=0xC8E63945
         DockNode    ID=0x0000000C Parent=0x00000006 SizeRef=367,1067 Split=Y Selected=0x97A5C2A5
           DockNode  ID=0x00000001 Parent=0x0000000C SizeRef=207,642 Selected=0x8A802616
           DockNode  ID=0x00000002 Parent=0x0000000C SizeRef=207,423 Selected=0x97A5C2A5
