--- a/autoDMP.ini
+++ b/autoDMP.ini
@@ -57,8 +57,8 @@ Collapsed=0
 DockId=0x0000000E,0
 
 [Window][Ctrl Data]
-Pos=1180,21
-Size=371,995
+Pos=1162,21
+Size=389,995
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -123,10 +123,10 @@ DockSpace           ID=0xC3C5E3D9 Window=0xDEDC5B90 Pos=0,21 Size=1920,995 Split
           DockNode  ID=0x0000000D Parent=0x00000007 SizeRef=445,1033 Selected=0x080A23F9
           DockNode  ID=0x0000000E Parent=0x00000007 SizeRef=571,1033 Selected=0xEEEF5479
         DockNode    ID=0x00000008 Parent=0x0000000A SizeRef=1110,32 Selected=0x132954D7
-    DockNode        ID=0x00000004 Parent=0x00000010 SizeRef=1684,1067 Split=X
+    DockNode        ID=0x00000004 Parent=0x00000010 SizeRef=758,1067 Split=X
       DockNode      ID=0x00000005 Parent=0x00000004 SizeRef=448,1067 Selected=0x83569755
       DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=461,1067 Split=X
-        DockNode    ID=0x0000000B Parent=0x00000006 SizeRef=1315,1067 CentralNode=1 Selected=0xC8E63945
+        DockNode    ID=0x0000000B Parent=0x00000006 SizeRef=389,1067 CentralNode=1 Selected=0xDB6ECE2B
         DockNode    ID=0x0000000C Parent=0x00000006 SizeRef=367,1067 Split=Y Selected=0x97A5C2A5
           DockNode  ID=0x00000001 Parent=0x0000000C SizeRef=207,642 Selected=0x8A802616
           DockNode  ID=0x00000002 Parent=0x0000000C SizeRef=207,423 Selected=0x97A5C2A5
