--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -4,7 +4,8 @@ add_library(gui
   "./src/gui/windows/improc_window.cpp"
   "./src/gui/windows/pump_window.cpp"
   "./src/gui/windows/sysid_window.cpp"
-  "./src/gui/windows/ctrl_window.cpp")
+  "./src/gui/windows/ctrl_window.cpp"
+  "./src/gui/windows/plot_window.cpp")
 
 # includes
 include(FetchContent)
