--- a/autoDMP.ini
+++ b/autoDMP.ini
@@ -15,8 +15,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Pump Setup]
-Pos=1550,622
-Size=370,394
+Pos=1550,21
+Size=370,995
 Collapsed=0
 DockId=0x00000002,0
 
@@ -83,6 +83,12 @@ Size=918,995
 Collapsed=0
 DockId=0x0000000F,0
 
+[Window][Real Time Plot]
+Pos=1162,21
+Size=386,995
+Collapsed=0
+DockId=0x0000000B,0
+
 [Table][0x475FE97E,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
@@ -126,7 +132,7 @@ DockSpace           ID=0xC3C5E3D9 Window=0xDEDC5B90 Pos=0,21 Size=1920,995 Split
     DockNode        ID=0x00000004 Parent=0x00000010 SizeRef=758,1067 Split=X
       DockNode      ID=0x00000005 Parent=0x00000004 SizeRef=448,1067 Selected=0x83569755
       DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=461,1067 Split=X
-        DockNode    ID=0x0000000B Parent=0x00000006 SizeRef=386,1067 CentralNode=1 Selected=0xDB6ECE2B
+        DockNode    ID=0x0000000B Parent=0x00000006 SizeRef=386,1067 CentralNode=1 Selected=0x3AD9D0B8
         DockNode    ID=0x0000000C Parent=0x00000006 SizeRef=370,1067 Split=Y Selected=0x97A5C2A5
           DockNode  ID=0x00000001 Parent=0x0000000C SizeRef=207,642 Selected=0x8A802616
           DockNode  ID=0x00000002 Parent=0x0000000C SizeRef=207,423 Selected=0x97A5C2A5
