improc redesign, general refactoring
- improc changes: add clustering, L2 norm minimization
- ctrl changes: removed state machine, sysID code
- gui changes: updated ctrl window to match ctrl changes

- new imgui_bundle version causes showstopping error, roll back to v0.8.5 for now

--- a/ctrl/CMakeLists.txt
+++ b/ctrl/CMakeLists.txt
@@ -1,10 +1,5 @@
 add_library(ctrl
-  "./src/ctrl/supervisor.cpp"
-  "./src/ctrl/state/sysidstate.cpp"
-  "./src/ctrl/state/state.cpp"
-  "./src/ctrl/state/state0.cpp"
-  "./src/ctrl/state/state1.cpp"
-  "./src/ctrl/state/state2.cpp")
+  "./src/ctrl/supervisor.cpp")
 
 # includes
 set(ctrl_INCLUDE_DIR
