changes to support >3 channels

--- a/autoDMP.ini
+++ b/autoDMP.ini
@@ -63,7 +63,7 @@ Collapsed=0
 DockId=0x0000000B,0
 
 [Window][ImPlot Demo]
-Pos=1104,689
+Pos=737,131
 Size=600,750
 Collapsed=0
 
@@ -112,6 +112,21 @@ Column 3  Weight=1.0000
 Column 4  Weight=1.0000
 Column 5  Weight=1.0000
 Column 6  Weight=1.0000
+
+[Table][0xDA36A7E0,6]
+RefScale=15
+Column 0  Width=29 Sort=0v
+Column 1  Width=48
+Column 2  Width=74
+Column 3  Width=63
+Column 4  Weight=1.0000
+Column 5  Width=-1
+
+[Table][0x306783DE,3]
+RefScale=15
+Column 0  Width=75
+Column 1  Width=75
+Column 2  Weight=1.0000
 
 [Docking][Data]
 DockSpace           ID=0xC3C5E3D9 Window=0xDEDC5B90 Pos=0,21 Size=1920,995 Split=X
