--- a/config/setup.toml
+++ b/config/setup.toml
@@ -14,7 +14,7 @@ showDebug = false
 
 [cam]
 # select camera source [string: "Webcam"/"USBcam"/"File"/"Andor"]
-source      = "Andor"
+source      = "Webcam"
 # if source = "File", the selected video file is used [string]
 file        = ""
 
@@ -83,7 +83,7 @@ type      = "FLUIGENT"
 confPath    = "/autoDMP/config/ctrl/"
 dataPath    = "/autoDMP/data/ctrl/"
 # perform all steps but don't send control signal to pump [bool]
-simMode         = false
+simMode         = true
 
 [postproc]
 # path for improc data
