update some params for new T-junction chip

--- a/config/setup.toml
+++ b/config/setup.toml
@@ -76,7 +76,7 @@ confSrc = "fromFile"
 
 [pump]
 # select pump [string: "BARTELS"/"FLUIGENT"]
-type      = "BARTELS"
+type      = "FLUIGENT"
 
 [ctrl]
 # path for control data
