--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,3 +28,4 @@ add_subdirectory(./ctrl)
 add_subdirectory(./gui)
 add_subdirectory(./pump)
 add_subdirectory(./external)
+add_subdirectory(./pump_sinewave)
