changed sub directory name pump_sinewave to pump_pressure_inputs, changed all code in appropriate subdirectories of pump_pressure_inputs to accomodate this change. Changed conv_txt_to_vec.cpp test file in fn_tests_and_fn_logic_files subdirectory to make more effecient code for turning the pressure and time values from the text file of the sinewave into a vector. Added include/pump_pressure_inputs and src/pump_pressure_inputs to create a OOP class structure for converting the text files to vector and storing the time and pressure data. Currently working on Pressure_Pump_Input class.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,4 +28,4 @@ add_subdirectory(./ctrl)
 add_subdirectory(./gui)
 add_subdirectory(./pump)
 add_subdirectory(./external)
-add_subdirectory(./pump_sinewave)
+add_subdirectory(./pump_pressure_inputs)
